<resources>
    <string name="app_name3">Rent Book - Rent Property Manager</string>
    <string name="app_name">RentBook: Property Manager</string>
    <string name="app_name1">Rentify - Room Rent Management</string>
    <string name="text_welcome">Welcome Back!</string>
    <string name="text_sub_welcome">Manage your properties effortlessly.</string>
    <string name="text_login_w_phone">Login With Phone</string>
    <string name="text_user">User</string>
    <string name="text_value_name">Rahul Kumar</string>
    <string name="text_occupancy">Occupancy</string>
    <string name="text_some_percentage">0%</string>
    <string name="text_label_rooms_cap">ROOMS</string>
    <string name="text_label_shops_cap">SHOPS</string>
    <string name="text_label_collections">Collections</string>
    <string name="text_sub_rent_elc">Rent &amp; E-Bill</string>
    <string name="text_label_view_summary_long">View Rent &amp; E-Bill Summary</string>
    <string name="text_label_view_summary">View Summary</string>
    <string name="text_value_month_year">Jan 2025</string>
    <string name="text_total_collected">Total Collected</string>
    <string name="text_value_amount">₹ 0</string>
    <string name="text_properties">Properties</string>
    <string name="text_add_property">Add Property</string>
    <string name="text_elc_meter_readings">Electricity Meter Readings</string>
    <string name="text_label_starting_reading">Set Meter Start Reading</string>
    <string name="text_sub_starting_reading">Set the meter units from which electricity bill tracking should begin for this tenant.</string>
    <string name="text_no_properties_added_yet">No properties added yet.</string>
    <string name="text_start_managing_desc">Start managing your\nproperties by adding your\nfirst one!</string>
    <string name="text_add_first_property">Add Your First Property</string>
    <string name="text_image_desc">TODO</string>
    <string name="text_track_recent_updates">Track Recent Updates Across Properties.</string>
    <string name="text_monthly_coll_summary">Monthly collection summary for selected property.</string>
    <string name="text_property_name">Property Name</string>
    <string name="text_value_city">New Delhi</string>
    <string name="text_rooms_colon">Rooms: </string>
    <string name="text_shops_colon">Shops: </string>
    <string name="text_rooms">Rooms</string>
    <string name="text_shops">Shops</string>
    <string name="text_slash">/</string>
    <string name="text_activity_log_title">Rent Recorded</string>
    <string name="text_activity_log_desc">₹2,801 rent added for Room 01 at Demo Property.</string>
    <string name="text_login_subheading">Manage your properties, tenants &amp; rents effortlessly at one place.</string>
    <string name="text_label_mobile_no">Mobile Number</string>
    <string name="text_country_code_in">+91</string>
    <string name="text_hint_mobile_no">e.g. 9876543210</string>
    <string name="text_hint_mob_no_10">Enter 10-digit Number</string>
    <string name="text_hint_enter_code">Enter OTP</string>
    <string name="text_btn_send_otp">Send OTP</string>
    <string name="text_btn_verify_otp">Verify OTP</string>
    <string name="text_or">OR</string>
    <string name="text_btn_sign_with_google">Sign In With Google</string>
    <string name="text_login_terms1">By continuing, you agree to our</string>
    <string name="text_login_terms2">Terms of Service</string>
    <string name="text_login_terms3">and</string>
    <string name="text_login_terms4">Privacy Policy.</string>
    <string name="text_account_setting">Account Setting</string>
    <string name="text_user_info">User Information</string>
    <string name="text_hint_user_name">Enter User Name</string>
    <string name="text_owner">Owner</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="text_label_mobile_cap">MOBILE</string>
    <string name="text_label_email_cap">E-MAIL</string>
    <string name="text_any_number">0</string>
    <string name="text_value_email">rahulraj82@gmail.com</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_sign_out_ques">Sign Out?</string>
    <string name="text_desc_sign_out">Are you sure you want to log out of your account?</string>
    <string name="text_support_info">Support &amp; Info</string>
    <string name="text_contact_support">Contact Support</string>
    <string name="text_get_assist">Get assistance with your account</string>
    <string name="text_about_app">About App</string>
    <string name="text_version_full">Version 1.1.0</string>
    <string name="text_version">v2.4.1</string>
    <string name="text_btn_logout">Logout</string>
    <string name="text_rentify_copyright">Rentify: Rent Manager App © 2024</string>
    <string name="text_label_total_coll_cap">TOTAL COLLECTIONS</string>
    <string name="text_rent_colon">Rent:</string>
    <string name="text_power_colon">Power:</string>
    <string name="text_electricity_colon">Electricity:</string>
    <string name="text_heading_no_monthly_collection">No Collections Yet</string>
    <string name="text_sub_no_monthly_collection">Start Tracking Monthly Rent &amp; Electricity Bills for Properties.</string>
    <string name="text_all_time">All Time</string>
    <string name="text_toolbar_property_details">Property Details</string>
    <string name="text_label_overview">Dashboard Overview</string>
    <string name="text_label_coll_overview">Collections Overview</string>
    <string name="bullet_dot">\u2022</string>
    <string name="text_label_rent_collected">Rent Collected</string>
    <string name="text_label_rent">Rent</string>
    <string name="text_book">Book</string>
    <string name="text_prop_rent_manager">Property Rent Manager</string>
    <string name="text_label_elc_bill">Electricity Bill</string>
    <string name="text_label_consumed">Consumed</string>
    <string name="text_total">Total</string>
    <string name="text_occupied">Occupied</string>
    <string name="text_collected">Collected</string>
    <string name="text_label_rooms_shops">Rooms &amp; Shops</string>
    <string name="text_menu_edit_property">Edit Property</string>
    <string name="text_menu_delete_property">Delete Property</string>
    <string name="text_paid">Paid</string>
    <string name="text_due">Due</string>
    <string name="text_del_prop">Delete Property?</string>
    <string name="text_delete_property_desc">This action will permanently delete the property: \'%1$s\'. All data, including rents, electricity bills, tenants, and collections, will be lost.</string>
    <string name="text_hint_enter_del">Enter DELETE</string>
    <string name="text_room_01">Room 01</string>
    <string name="text_vacant">Vacant</string>
    <string name="text_rupee_symbol">₹</string>
    <string name="text_value_mobile_no">9876543210</string>
    <string name="text_meter_cap">METER</string>
    <string name="text_monthly_rent">Monthly Rent</string>
    <string name="text_rent_status">Rent Status</string>
    <string name="text_no_tenant_added">No Tenant Added</string>
    <string name="text_clk_add_tenant">Click (Add Tenant)</string>
    <string name="text_toolbar_add_new_prop">Add New Property</string>
    <string name="text_toolbar_edit_prop_details">Edit Property Details</string>
    <string name="text_label_prop_details_cap">PROPERTY DETAILS</string>
    <string name="text_hint_property_name">e.g., Sunset Apartments</string>
    <string name="text_label_address">Address</string>
    <string name="text_hint_address">e.g. Dwarka, New Delhi</string>
    <string name="text_label_configuration_cap">CONFIGURATION</string>
    <string name="text_label_total_rooms">Total Rooms</string>
    <string name="text_label_total_shops">Total Shops</string>
    <string name="text_label_financial_cap">FINANCIALS</string>
    <string name="text_label_base_rent">BASE RENT (₹/mon)</string>
    <string name="text_hint_base_rent_amount">e.g. ₹ 2,500</string>
    <string name="text_label_elc_unit_rate">ELEC. RATE (₹/unit)</string>
    <string name="text_hint_elc_unit">e.g. ₹7/unit</string>
    <string name="text_btn_create_property">Create Property</string>
    <string name="text_btn_update_property">Update Property</string>
    <string name="text_tenant_info">Tenant Information</string>
    <string name="text_start_colon">Start:</string>
    <string name="text_end_colon">End:</string>
    <string name="text_na">N/A</string>
    <string name="text_value_date">31 Mar 2025</string>
    <string name="text_view_profile">View Profile</string>
    <string name="text_view_past_tenant">View Past Tenant</string>
    <string name="text_tab_room_rents">Room Rents</string>
    <string name="text_tab_elc_bills">Electricity Bills</string>
    <string name="text_action_btn_add_rent">Add Rent</string>
    <string name="text_action_btn_add_elc_bill">Add Electricity Bill</string>
    <string name="text_remove_tenant_ques">Remove Tenant?</string>
    <string name="text_sub_remove_tenant_ques">This will remove the current tenant and mark room as vacant.</string>
    <string name="text_label_del_rent">Delete Rent Record?</string>
    <string name="text_desc_del_rent">Are you sure you want to delete this rent record?</string>
    <string name="text_menu_edit_room">Edit Room</string>
    <string name="text_menu_edit_shop">Edit Shop</string>
    <string name="text_menu_edit_tenant">Edit Tenant</string>
    <string name="text_menu_remove_tenant">Remove Tenant</string>
    <string name="text_save_close">Save &amp; Close</string>
    <string name="text_continue">Continue</string>
    <string name="text_value_month_MMM">MAR</string>
    <string name="text_value_year">2025</string>
    <string name="text_value_rent_interval">03 Dec - 02 Jan</string>
    <string name="text_value_date_time">31 Dec 2025, 10:16 PM</string>
    <string name="text_symbol_plus">+</string>
    <string name="text_units">units</string>
    <string name="text_paid_till_colon">Paid Till:</string>
    <string name="text_heading_no_rent_record">No Rent Record</string>
    <string name="text_heading_no_elc_bill_record">No Electricity Bill Record</string>
    <string name="text_btn_add_first_rent_record">Add First Rent Record</string>
    <string name="text_sub_no_rent_record">Start Managing Rent Payments for this Room.</string>
    <string name="text_sub_no_elc_bill_record">Start Managing Electricity Bill Records for this Room.</string>
    <string name="text_btn_add_first_elc_bill_record">Add First E-Bill Record</string>
    <string name="text_select_rent_month">Select Rent Month</string>
    <string name="text_change">Change</string>
    <string name="text_label_rent_details">RENT DETAILS</string>
    <string name="text_label_rent_paid">Rent Paid</string>
    <string name="text_label_payment_mode">Payment Mode</string>
    <string name="text_cash">Cash</string>
    <string name="text_online">Online</string>
    <string name="text_label_payment_date_time_cap">PAYMENT DATE &amp; TIME</string>
    <string name="text_value_time">10:00 AM</string>
    <string name="text_btn_add_rent_record">Add Rent Record</string>
    <string name="text_select_elc_bill_month">Select E-Bill Month</string>
    <string name="text_label_ebill_details_cap">E-BILL DETAILS</string>
    <string name="text_label_billing_mode">Billing Mode</string>
    <string name="text_toggle_enter_units">Enter Units</string>
    <string name="text_toggle_enter_amount">Enter Amount</string>
    <string name="text_btn_add_first_tenant">Add First Tenant</string>
    <string name="text_tenant_history">Tenant History</string>
    <string name="text_heading_no_tenant_history">No Tenant History</string>
    <string name="text_sub_no_tenant_history">The Room Has Not Been Assigned to Any Tenant Yet.</string>
    <string name="text_value_prop_name">Sunset, Room 01</string>
</resources>