<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BillsFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvElcBillRecord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"/>

    <LinearLayout
        android:id="@+id/layoutNoBillRecord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:paddingTop="50dp">

        <!-- Icon -->
        <ImageView
            android:id="@+id/img_empty_property"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_no_ebill_record"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/text_image_desc"/>

        <!-- Title -->
        <TextView
            android:id="@+id/tv_empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_heading_no_elc_bill_record"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_heading"
            android:gravity="center" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tv_empty_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sub_no_elc_bill_record"
            android:textSize="14sp"
            android:textColor="@color/text_muted"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="4dp" />

    </LinearLayout>


</RelativeLayout>