<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp">

        <!-- Drag Handle -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="48dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/light_separator" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvTenantHistoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_remove_tenant_ques"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/text_heading" />

        <TextView
            android:id="@+id/tvBSRoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sub_remove_tenant_ques"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/text_subheading" />

        <!-- CARD -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/bg_dashboard_card"
            app:strokeColor="@color/border_dashboard_card"
            app:strokeWidth="0.7dp"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp">

                <!-- Top Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="12dp">

                    <!-- Profile Image -->
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgItemTenantProfile"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_tenant_profile_default"
                        android:scaleType="centerCrop" />

                    <!-- Name & Phone -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="12dp">

                        <TextView
                            android:id="@+id/tvItemTenantName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_value_name"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="@color/text_heading" />

                        <TextView
                            android:id="@+id/tvItemTenantPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_value_mobile_no"
                            android:textSize="14sp"
                            android:textColor="@color/text_subheading" />

                    </LinearLayout>
                </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel"
                android:textColor="@color/text_subheading_fade"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingVertical="6dp"/>

            <View
                android:layout_width="28dp"
                android:layout_height="match_parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnRemoveTenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="50dp"
                app:cardElevation="1dp"
                app:cardUseCompatPadding="true"
                app:strokeWidth="1dp"
                app:strokeColor="@color/primary_main"
                app:cardBackgroundColor="@color/btn_primary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/text_image_desc"
                        android:src="@drawable/ic_delete_bin"
                        app:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/text_menu_remove_tenant"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"/>


    </LinearLayout>
</ScrollView>